@@ -108,6 +108,30 @@ void SetCocoaLumberjackObjCLogLevel(NSUInteger ddLogLevelRawValue)
     return description;
 }
 
+#pragma mark - Deleting
+
+- (void)deleteAllLogs
+{
+    NSArray *logFiles = self.fileLogger.logFileManager.sortedLogFileInfos;
+    for (DDLogFileInfo *logFileInfo in logFiles) {
+        [[NSFileManager defaultManager] removeItemAtPath:logFileInfo.filePath error:nil];
+    }
+    
+    DDLogWarn(@"All log files erased.");
+}
+
+- (void)deleteArchivedLogs
+{
+    NSArray *logFiles = self.fileLogger.logFileManager.sortedLogFileInfos;
+    for (DDLogFileInfo *logFileInfo in logFiles) {
+        if (logFileInfo.isArchived) {
+            [[NSFileManager defaultManager] removeItemAtPath:logFileInfo.filePath error:nil];
+        }
+    }
+    
+    DDLogWarn(@"All archived log files erased.");
+}
+
 #pragma mark - Public static methods
 
 + (void)configureLoggerLevelWithExtraDebug {
